--- a/styles/Item.module.scss
+++ b/styles/Item.module.scss
@@ -226,6 +226,10 @@
         display: block;
         padding: 0 $gutter_desktop;
         overflow: hidden;
+
+        @media screen and (max-width: $mq-mobile-max) {
+          padding: 0 $gutter_mobile;
+        }
       }
     }
 
